# AndroidNDKDevelopment

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/org/simley/ndk_day78/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EGL.cpp  EGL.h  FaceTrack.cpp  FaceTrack.h  JavaVMInit.cpp  SerialPort.c  SerialPort.h  YEAudio.cpp  YEAudio.h  YECallJava.cpp  YECallJava.h  YEFFmpeg.cpp  YEFFmpeg.h  YEPlayStatus.cpp  YEPlayStatus.h  YEQueue.cpp  YEQueue.h  YEVideo.cpp  YEVideo.h  YeLog.h  bitmap_util.cpp  bitmap_util.h  cardocr.cpp  cardocr.h  com_simley_ndk_day78_fmod_FmodActivity.h  cv_helper.cpp  cv_helper.h  idcard_recognition.cpp  native-fmod.cpp  native-lib.cpp  player.cpp  text_recognize.cpp  utils.cpp  utils.h  ye_log.h
app/src/main/cpp/FaceAlignment/: CMakeLists.txt
app/src/main/cpp/include/fmod/: fmod.hpp  fmod_common.h
app/src/main/cpp/include/libavcodec/: avcodec.h  packet.h
app/src/main/cpp/include/libavdevice/: avdevice.h
app/src/main/cpp/include/libavfilter/: avfilter.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/include/libavutil/: ffversion.h  frame.h
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/cpp/include/opencv2/: core.hpp
app/src/main/cpp/include/opencv2/core/: core_c.h
app/src/main/cpp/soundtouch/SoundTouch/: SoundTouch.cpp
app/src/main/java/com/simley/ndk_day78/: App.java  App.kt  MainActivity.java
app/src/main/java/org/opencv/android/: AsyncServiceHelper.java  Camera2Renderer.java  CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCamera2View.java  JavaCameraView.java
app/src/main/java/org/opencv/core/: Core.java  CvType.java  MatOfDMatch.java  MatOfKeyPoint.java  MatOfPoint.java  MatOfPoint2f.java  MatOfPoint3.java  MatOfPoint3f.java  MatOfRect.java  MatOfRect2d.java  MatOfRotatedRect.java
app/src/main/java/org/opencv/dnn/: Dnn.java
app/src/main/java/org/opencv/imgcodecs/: Imgcodecs.java
app/src/main/res/drawable/: blue_gradient.xml  btn_record_background.xml
app/src/main/res/layout/: activity_audio_player.xml  activity_bank_card_recognition.xml  activity_display_result.xml  activity_face_detection.xml  activity_fmod.xml  activity_idcard_recognition.xml  activity_main.xml  activity_my_glsurface_view.xml  activity_player.xml  activity_select_serial_port.xml  activity_serial_port.xml  activity_text_recognition.xml  activity_tiktok_video_fast_slow.xml  activity_video_player.xml  activity_video_player2.xml  layout_discview.xml
app/src/main/res/raw/: base_fragment.glsl  base_vertex.glsl  beauty_fragment.glsl  beauty_fragment2.glsl  bigeye_fragment.glsl  camera_fragment.glsl  camera_vertex.glsl  fragment_shader.glsl
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/test/java/org/simley/ndk_day78/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_base/: build.gradle
lib_base/src/androidTest/java/com/simley/lib_base/: ExampleInstrumentedTest.kt
lib_base/src/main/java/com/simley/lib_base/: BaseActivity.kt  BaseFragment.kt
lib_base/src/test/java/com/simley/lib_base/: ExampleUnitTest.kt
lib_catcher/: build.gradle
lib_catcher/src/androidTest/java/com/simley/lib_catcher/: ExampleInstrumentedTest.java
lib_catcher/src/test/java/com/simley/lib_catcher/: ExampleUnitTest.java
lib_database/: build.gradle
lib_database/src/androidTest/java/com/simley/lib_database/: ExampleInstrumentedTest.kt
lib_database/src/test/java/com/simley/lib_database/: ExampleUnitTest.kt
lib_database_room/: build.gradle.kts
lib_database_room/src/androidTest/java/com/simley/lib_database_room/: ExampleInstrumentedTest.kt
lib_database_room/src/test/java/com/simley/lib_database_room/: ExampleUnitTest.kt
lib_ext/: build.gradle
lib_ext/src/androidTest/java/com/simley/lib_ext/: ExampleInstrumentedTest.kt
lib_ext/src/test/java/com/simley/lib_ext/: ExampleUnitTest.kt
lib_glide/: build.gradle
lib_glide/src/androidTest/java/com/simley/lib_glide/: ExampleInstrumentedTest.kt
lib_glide/src/main/java/com/simley/lib_glide/: YeGlide.kt
lib_glide/src/test/java/com/simley/lib_glide/: ExampleUnitTest.kt
lib_hls/: build.gradle
lib_hls/src/androidTest/java/com/simley/lib_hls/: ExampleInstrumentedTest.java
lib_hls/src/main/java/com/simley/lib_hls/: Aes128DataSource.java  BundledHlsMediaChunkExtractor.java  DefaultHlsDataSourceFactory.java  DefaultHlsExtractorFactory.java  FullSegmentEncryptionKeyCache.java  HlsChunkSource.java  HlsDataSourceFactory.java  HlsExtractorFactory.java  HlsManifest.java  HlsMediaChunk.java  HlsMediaChunkExtractor.java  HlsMediaPeriod.java  HlsMediaSource.java  HlsSampleStream.java  HlsSampleStreamWrapper.java  HlsTrackMetadataEntry.java  MediaParserHlsMediaChunkExtractor.java  SampleQueueMappingException.java  TimestampAdjusterProvider.java  UnexpectedSampleTimestampException.java  WebvttExtractor.java
lib_hls/src/test/java/com/simley/lib_hls/: ExampleUnitTest.java
lib_layout/: build.gradle
lib_layout/src/androidTest/java/com/simley/lib_layout/: ExampleInstrumentedTest.kt
lib_layout/src/test/java/com/simley/lib_layout/: ExampleUnitTest.kt
lib_mlkit/: build.gradle.kts
lib_mlkit/src/main/: AndroidManifest.xml
lib_mlkit/src/main/res/layout/: activity_mlface_detection.xml
lib_mqtt/: build.gradle.kts
lib_mvi/: build.gradle
lib_mvp/: build.gradle
lib_network/: build.gradle
lib_okhttp/: build.gradle
lib_okio/: build.gradle  proguard-rules.pro
lib_rtmp/: build.gradle
lib_rtmp/src/main/: AndroidManifest.xml
lib_rtmp/src/main/cpp/: CMakeLists.txt  lib_rtmp.c  lib_rtmp.h  rtmpmuxer.c
lib_rtmp/src/main/cpp/flvmuxer/: xiecc_rtmp.c
lib_rtsp/: build.gradle
lib_serialport/: build.gradle
lib_serialport/src/main/cpp/: CMakeLists.txt  SerialPort.c  SerialPort.h
lib_serialport/src/main/res/layout/: item_device.xml
lib_socket/: build.gradle
numeric_keyboard/: build.gradle
(+411 files in other folders)
